src/core/Claroline/CoreBundle/Tests/stub/plugin/extension/Invalid/UnloadableBundleClass3/InvalidUnloadableBundleClass3.php
<?php

namespace Invalid\UnexpectedNamespace;

class InvalidUnloadableBundleClass3
{
    /*
     * Unloadable because the bundle namespace doesn't
     * match the bundle directory
     */
}